# filmy

./: .env  .gitignore  Makefile  readme.md
backend/: .gitignore  prefect.yaml  pyproject.toml  start.sh
backend/app/: main.py  model_state.py
backend/app/core/: db.py  qdrant.py
backend/app/ml/loaders/: model_loader.py
backend/app/ml/models/: dataset_map.pkl  implicit_model.pkl  interactions.npz  item_factors.npy  user_factors.npy
backend/app/ml/pipelines/: implicit_train.py
backend/app/ml/utils/: implicit_utils.py
backend/app/model_handlers/: __init__.py  movie_handler.py  user_feedback_handler.py  user_handler.py
backend/app/models/: __init__.py  movies.py  users.py
backend/app/pipelines/data/: generate_config.json  generate_synthetic_feedbacks.py  ingest_tmdb.py
backend/app/pipelines/prefect/: ingest_flow.py  training_flow.py
backend/app/pipelines/training/: als_mlflow_wrapper.py  train_implicit.py  training_helper.py
backend/app/routes/: movies.py  recommendation.py  user_feedback.py  users.py
backend/app/services/: recommendation_service.py
backend/app/utils/: model_loader.py
backend/config/: settings.dev.yaml  settings.prod.yaml
backend/data/: .gitignore  TMDB_movie_dataset_v11.csv.dvc  tmdb_dataset_cleaned.parquet.dvc
backend/data/cleaned/: .gitignore  tmdb_dataset_cleaned.parquet.dvc
backend/ops/: Dockerfile  Dockerfile.worker
backend/scripts/: generate_embeddings.py  generate_synthetic_feedbacks.py  generate_synthetic_feedbacks_v2.py  get_missing_release_date.py  index_embeddings.py  inject_movies.py  tmdb_cleaning.ipynb
(+44 files in other folders)
